--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: website-test
+  database: website_test
 
 production:
   <<: *default
