--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "owl.carousel": "^2.3.4"
+  },
+  "engines": {
+    "yarn": "1.x",
+    "node": "11.x"
   }
 }
